0.7.0b12:
  Use async calls
0.7.0b11:
  Fix race writing meta data
0.7.0b10:
  Fix IO in event loop issues
0.7.0b9:
  handle no switches defined better
0.7.0b8:
  fix async callback issue
0.7.0a7:
  fix upgrade issues
    fix out of correct loop message
    fix config path
0.7.0a6:
  add import notice
0.7.0a5:
  fix timedelta on import
0.7.0a4:
  allow multiple switches per device
0.7.0a3:
  tidy up code
0.7.0a2:
  make instance variables explicit
0.7.0a1:
  support device/entity and standard integrations

0.6.3: restore switch state
0.6.2: restore wrongly removed options
0.6.1: code tidy

0.5.3: fix device attribute issue
0.5.2: make momentary prefix optional
0.5.1: fixed Home Assistant breaking change
0.4: add mode, allow device to turn off momentarily
0.3: code tidy, fixed is_on